Added the link of sections and edited the name of our product

--- a/index.html
+++ b/index.html
@@ -2,7 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>D-ASSISTANT</title>
+  <title>D-BRIEF</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
 </head>
+<body>
+  <header>
+    <nav class="main-nav">
+      <a href="index.html" class="logo">D-BRIEF</a>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="features.html">Features</a></li>
+        <li><a href="contact.html">Contact / About</a></li>
+      </ul>
+    </nav>
