Changed it the name of h1 and the description paragraph

--- a/index.html
+++ b/index.html
@@ -16,3 +16,17 @@
         <li><a href="contact.html">Contact / About</a></li>
       </ul>
     </nav>
+     <section class="hero">
+      <div class="hero-content">
+        <h1>Smarter structure. Stronger stories. Human-led, always.</h1>
+        <p>
+       Innovate By Day’s next-generation Discovery tool turns meeting notes and client inputs into a clear, structured draft brief—with gaps flagged, a visual summary, and a Scope of Work—helping government and cultural organizations kick off projects faster and with more confidence.
+        </p>
+        <a href="features.html" class="btn-primary">Learn More</a>
+      </div>
+      <div class="hero-image">
+        <img src="https://via.placeholder.com/500x350" alt="Mockup of Storyworks experience" />
+      </div>
+    </section>
+  </header>
+
