Added benefits, ready to explore and a footer

--- a/index.html
+++ b/index.html
@@ -29,4 +29,48 @@
       </div>
     </section>
   </header>
+  <main>
+    <section class="problem-solution">
+      <h2>The Problem</h2>
+      <p>
+        Government and cultural organizations need to launch projects quickly, but their discovery process is slow, fragmented, and difficult to align across teams. Important details get lost in meetings, documents, and email threads, making it hard to form a clear brief. This leads to delays, miscommunication, and extra effort for both clients and agencies like Innovate By Day.
+      </p>
+
+      <h2>Our Solution</h2>
+      <p>
+        Our AI Discovery Assistant brings all project information together and turns it into a clear, structured draft brief within minutes. It analyzes meeting notes, client documents, and intake answers, identifies missing details, and creates a visual summary plus a Scope of Work. This gives government and cultural organizations a faster, more organized project kickoff—while IBD keeps full creative control and adds the final human touch.
+      </p>
+    </section>
+<section class="benefits">
+      <h2>Why D-BRIEF</h2>
+      <div class="benefit-grid">
+        <article class="benefit-card">
+          <h3>Benefit 1</h3>
+          <p>Faster project kickoffs: The AI organizes all inputs instantly, reducing days of manual sorting and drafting.</p>
+        </article>
+        <article class="benefit-card">
+          <h3>Benefit 2</h3>
+          <p>Clear, aligned briefs: It creates structured briefs with gaps identified, helping teams start with shared understanding.</p>
+        </article>
+        <article class="benefit-card">
+          <h3>Benefit 3</h3>
+          <p>More Time for Creative Work: With the heavy lifting automated, IBD can focus on strategy, storytelling, and client collaboration.</p>
+        </article>
+      </div>
+    </section>
+     <section class="cta-section">
+      <h2>Ready to Explore D-BRIEF?</h2>
+      <p>Discover the full experience and see how it fits into your workflow.</p>
+      <a href="contact.html" class="btn-secondary">Sign Up for Updates</a>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 D-BRIEF. All rights reserved.</p>
+  </footer>
+
+  <script src="js/main.js"></script>
+</body>
+</html>
+
 
