Adding first part of the code and title

--- a/features.html
+++ b/features.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Features</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+ <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <nav class="main-nav">
+      <a href="index.html" class="logo">[Storyworks]</a>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="features.html" class="active">Features</a></li>
+        <li><a href="contact.html">Contact / About</a></li>
+      </ul>
+    </nav>
+  </header>
 
