Added sections and articles

--- a/features.html
+++ b/features.html
@@ -17,4 +17,31 @@
       </ul>
     </nav>
   </header>
+  <main>
+    <section class="page-header">
+      <h1>Features & Experience</h1>
+      <p>Our AI-powered Discovery tool quickly transforms meeting notes, client documents, and intake answers into a clear draft brief and Scope of Work. It identifies gaps, generates simple visual summaries, and updates instantly when new information is added. Strategists then refine the draft with narrative clarity, cultural nuance, and IBD’s human-centered quality—creating a faster, smarter, more aligned project kickoff experience.</p>
+    </section>
 
+    <section class="features-list">
+      <article>
+        <h2>Automated Brief Creation</h2>
+        <p>
+        Meeting notes, client uploads, and intake answers are instantly structured into a clear project brief and preliminary Scope of Work.
+        </p>
+      </article>
+
+      <article>
+        <h2>Visual Story Snapshots</h2>
+        <p>
+          Creates simple diagrams and summaries that help teams quickly align on objectives, audiences, and scope.
+        </p>
+      </article>
+
+      <article>
+        <h2>Real-Time Updating</h2>
+        <p>
+          Any corrections or new information from clients can be uploaded, and the system updates the brief instantly, supporting faster turnaround times.
+        </p>
+      </article>
+    </section>
