--- a/features.html
+++ b/features.html
@@ -45,3 +45,17 @@
         </p>
       </article>
     </section>
+     <section class="mockups">
+      <h2>Interface Preview</h2>
+      <div class="mockup-grid">
+        <figure>
+          <img src="https://via.placeholder.com/400x250" alt="Screenshot of Storyworks screen 1" />
+          <figcaption>Dashboard view (placeholder).</figcaption>
+        </figure>
+        <figure>
+          <img src="https://via.placeholder.com/400x250" alt="Screenshot of Storyworks screen 2" />
+          <figcaption>Story flow view (placeholder).</figcaption>
+        </figure>
+      </div>
+    </section>
+
