Added section with testimonial

--- a/features.html
+++ b/features.html
@@ -58,4 +58,17 @@
         </figure>
       </div>
     </section>
+     <section class="testimonials">
+      <h2>What Users Are Saying</h2>
+      <div class="testimonial-grid">
+        <article class="testimonial-card">
+          <p class="quote">“[Storyworks] helped me organize my ideas into a story that finally makes sense.”</p>
+          <p class="author">— Alex, content creator (fictional)</p>
+        </article>
+        <article class="testimonial-card">
+          <p class="quote">“It saves me time and keeps my projects consistent.”</p>
+          <p class="author">— Jordan, project manager (fictional)</p>
+        </article>
+      </div>
+    </section>
 
