Updated the information in the code for how it works and some other features

--- a/features.html
+++ b/features.html
@@ -71,4 +71,33 @@
         </article>
       </div>
     </section>
+        <section class="read-more-section">
+      <h2>How It Works</h2>
+      <p>
+1. You share your project materials — meeting notes, documents, and priorities.
+
+2. The assistant organizes and drafts the brief, mapping your information into IBD’s strategic framework.
+
+3. IBD refines and finalizes it, adding cultural nuance, clarity, and alignment before sharing it back with you.
+      </p>
+
+      <div id="more-details" class="hidden">
+        <p>
+        Our process starts when you share your meeting notes and project materials. The assistant analyzes everything, identifies key information, and maps it into IBD’s briefing structure. It then generates a draft brief and scope of work within minutes.
+An IBD strategist reviews and refines the draft to ensure clarity, cultural nuance, accessibility, and alignment with your goals. As the project evolves, any new information you provide can be uploaded and the brief updates instantly, keeping everything accurate and up to date.
+        </p>
+      </div>
+
+      <button class="btn-tertiary read-more-btn" data-target="more-details">
+        Read more
+      </button>
+    </section>
+  </main>
+ <footer>
+    <p>&copy; 2025 D-BRIEF. All rights reserved.</p>
+  </footer>
+ <script src="js/main.js"></script>
+</body>
+</html>
+
 
