--- a/features.html
+++ b/features.html
@@ -94,7 +94,7 @@ An IBD strategist reviews and refines the draft to ensure clarity, cultural nuan
     </section>
   </main>
  <footer>
-    <p>&copy; 2025 D-BRIEF. All rights reserved.</p>
+    <p>2025 D-BRIEF. All rights reserved.</p>
   </footer>
  <script src="js/main.js"></script>
 </body>
