--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 D-BRIEF. All rights reserved.</p>
+    <p>2025 D-BRIEF. All rights reserved.</p>
   </footer>
 
   <script src="js/main.js"></script>
