Added part of the body structure and the list of sections

--- a/contact.html
+++ b/contact.html
@@ -6,3 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
 </head>
+  <body>
+  <header>
+    <nav class="main-nav">
+      <a href="index.html" class="logo">[Storyworks]</a>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="features.html">Features</a></li>
+        <li><a href="contact.html" class="active">Contact / About</a></li>
+      </ul>
+    </nav>
+  </header>
+
