Added <section class="contact-section">

--- a/contact.html
+++ b/contact.html
@@ -17,4 +17,16 @@
       </ul>
     </nav>
   </header>
+    <main class="contact-layout">
+    <section class="contact-section">
+      <h1>Contact Us</h1>
+      <p>Have questions or want to try D-BRIEF? Send us a message.</p>
+
+      <form id="contact-form" novalidate>
+        <div class="form-group">
+          <label for="name">Name *</label>
+          <input type="text" id="name" name="name" required />
+          <small class="error-message" id="name-error"></small>
+        </div>
+
 
