--- a/contact.html
+++ b/contact.html
@@ -28,5 +28,10 @@
           <input type="text" id="name" name="name" required />
           <small class="error-message" id="name-error"></small>
         </div>
+  <div class="form-group">
+          <label for="email">Email *</label>
+          <input type="email" id="email" name="email" required />
+          <small class="error-message" id="email-error"></small>
+        </div>
 
 
