--- a/contact.html
+++ b/contact.html
@@ -33,5 +33,10 @@
           <input type="email" id="email" name="email" required />
           <small class="error-message" id="email-error"></small>
         </div>
+<div class="form-group">
+          <label for="message">Message *</label>
+          <textarea id="message" name="message" rows="5" required></textarea>
+          <small class="error-message" id="message-error"></small>
+        </div>
 
 
