Added button and action confirmation

--- a/contact.html
+++ b/contact.html
@@ -38,5 +38,11 @@
           <textarea id="message" name="message" rows="5" required></textarea>
           <small class="error-message" id="message-error"></small>
         </div>
+    <button type="submit" class="btn-primary">Send Message</button>
+        <p class="form-success hidden" id="form-success">
+          Thank you! Your message has been received.
+        </p>
+      </form>
+    </section> 
 
 
