Added the section about the team

--- a/contact.html
+++ b/contact.html
@@ -44,5 +44,23 @@
         </p>
       </form>
     </section> 
+<aside class="about-section">
+      <h2>About the team</h2>
+      <p>
+    We are Natalia, Saptak, Maria, and Naman, a team of UX designers and advertising experts with over five years of collective experience. We’re driven by strong values, a focus on creativity, and a commitment to crafting unique, thoughtful products that make a meaningful impact.
+      </p>
+
+      <h3>Mission</h3>
+      <p>
+       Our mission is to make collaboration smoother by turning complex information into a clear, shared understanding.
+      </p>
+
+      <h3>Vision</h3>
+      <p>
+      Our vision is a future where AI and human expertise work hand in hand to deliver smart, confident, and values-driven project outcomes.
+      </p>
+    </aside>
+  </main>
+
 
 
