--- a/contact.html
+++ b/contact.html
@@ -61,6 +61,13 @@
       </p>
     </aside>
   </main>
+  <footer>
+  <p>2025 D-BRIEF. All rights reserved.</p>
+  </footer>
+
+  <script src="js/main.js"></script>
+</body>
+</html>
 
 
 
