Refine or edit parts pf the code

--- a/features.html
+++ b/features.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <nav class="main-nav">
-      <a href="index.html" class="logo">[Storyworks]</a>
+      <a href="index.html" class="logo">D-BRIEF</a>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="features.html" class="active">Features</a></li>
@@ -19,8 +19,8 @@
   </header>
   <main>
     <section class="page-header">
-      <h1>Features & Experience</h1>
-      <p>Our AI-powered Discovery tool quickly transforms meeting notes, client documents, and intake answers into a clear draft brief and Scope of Work. It identifies gaps, generates simple visual summaries, and updates instantly when new information is added. Strategists then refine the draft with narrative clarity, cultural nuance, and IBD’s human-centered quality—creating a faster, smarter, more aligned project kickoff experience.</p>
+      <h1>Features</h1>
+      <p>Our AI-powered Discovery tool quickly transforms meeting notes, client documents, and intake answers into a clear draft brief and Scope of Work. It identifies gaps, generates simple visual summaries, and updates instantly when new information is added. Strategists then refine the draft with narrative clarity, cultural nuance, and IBD’s human-centered quality, creating a faster, smarter, more aligned project kickoff experience.</p>
     </section>
 
     <section class="features-list">
@@ -63,23 +63,23 @@
       <div class="testimonial-grid">
         <article class="testimonial-card">
           <p class="quote">“[Storyworks] helped me organize my ideas into a story that finally makes sense.”</p>
-          <p class="author">— Alex, content creator (fictional)</p>
+          <p class="author">— Alex, Project Manager</p>
         </article>
         <article class="testimonial-card">
           <p class="quote">“It saves me time and keeps my projects consistent.”</p>
-          <p class="author">— Jordan, project manager (fictional)</p>
+          <p class="author">— Jordan, Design Lead</p>
         </article>
       </div>
     </section>
         <section class="read-more-section">
       <h2>How It Works</h2>
       <p>
-1. You share your project materials — meeting notes, documents, and priorities.
-
-2. The assistant organizes and drafts the brief, mapping your information into IBD’s strategic framework.
-
-3. IBD refines and finalizes it, adding cultural nuance, clarity, and alignment before sharing it back with you.
-      </p>
+<ul>
+  <li>You share your project materials, meeting notes, documents, and priorities.</li>
+  <li>The assistant organizes and drafts the brief, mapping your information into IBD’s strategic framework.</li>
+  <li>IBD refines and finalizes it, adding cultural nuance, clarity, and alignment before sharing it back with you.</li>
+</ul>
+ </p>
 
       <div id="more-details" class="hidden">
         <p>
