Edit spelling errors and added a list

--- a/features.html
+++ b/features.html
@@ -62,7 +62,7 @@
       <h2>What Users Are Saying</h2>
       <div class="testimonial-grid">
         <article class="testimonial-card">
-          <p class="quote">“[Storyworks] helped me organize my ideas into a story that finally makes sense.”</p>
+          <p class="quote">“D-BRIEF helped me organize my ideas into a story that finally makes sense.”</p>
           <p class="author">— Alex, Project Manager</p>
         </article>
         <article class="testimonial-card">
