--- a/features.html
+++ b/features.html
@@ -49,7 +49,7 @@
       <h2>Interface Preview</h2>
       <div class="mockup-grid">
         <figure>
-          <img src="https://via.placeholder.com/400x250" alt="Screenshot of Storyworks screen 1" />
+          <img src="d-briefprototype.png" alt="Screenshot of Storyworks screen 1" />
           <figcaption>Dashboard view (placeholder).</figcaption>
         </figure>
         <figure>
