Added another picture

--- a/features.html
+++ b/features.html
@@ -53,7 +53,7 @@
           <figcaption>Dashboard view (placeholder).</figcaption>
         </figure>
         <figure>
-          <img src="https://via.placeholder.com/400x250" alt="Screenshot of Storyworks screen 2" />
+          <img width="1024" height="1024" alt="Prototype2" src="https://github.com/user-attachments/assets/bb4046bf-7999-41ba-a3ef-5bda3e14af76" />
           <figcaption>Story flow view (placeholder).</figcaption>
         </figure>
       </div>
