--- a/features.html
+++ b/features.html
@@ -50,11 +50,7 @@
       <div class="mockup-grid">
         <figure>
           <img src="d-briefprototype.png" alt="Screenshot of Storyworks screen 1" />
-          <figcaption>Dashboard view (placeholder).</figcaption>
-        </figure>
-        <figure>
-          <img width="1024" height="1024" alt="Prototype2" src="https://github.com/user-attachments/assets/bb4046bf-7999-41ba-a3ef-5bda3e14af76" />
-          <figcaption>Story flow view (placeholder).</figcaption>
+          <figcaption>D-BRIEF ASSISTANT.</figcaption>
         </figure>
       </div>
     </section>
