--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="features.html" class="btn-primary">Learn More</a>
       </div>
       <div class="hero-image">
-        <img src="https://via.placeholder.com/500x350" alt="Mockup of Storyworks experience" />
+        <img src="d-briefprototype.png" alt="Mockup of Storyworks experience" />
       </div>
     </section>
   </header>
