--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
 </head>
+  <small class="error-message hidden" id="name-error"></small>
+<small class="error-message hidden" id="email-error"></small>
+<small class="error-message hidden" id="message-error"></small>
   <body>
   <header>
     <nav class="main-nav">
