--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
   <body>
   <header>
     <nav class="main-nav">
-      <a href="index.html" class="logo">[Storyworks]</a>
+      <a href="index.html" class="logo">D-BRIEF</a>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="features.html">Features</a></li>
